# python-droneposelib

./: .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  requirements.txt  setup.py  tox.ini
example/: synthetic.py  test_synthetic.py
src/: bindings.cpp
tests/: helpers.py  test_examples.py  test_valtonenornhag_arxiv_2021.py
tests/approved_files/: ValtonenOrnhagArxiv2021fEfTestCase.test_valtonenornhag_arxiv_2021_fEf_sol0.approved.txt  ValtonenOrnhagArxiv2021fEfTestCase.test_valtonenornhag_arxiv_2021_fEf_sol0_t.approved.txt  ValtonenOrnhagArxiv2021fEfTestCase.test_valtonenornhag_arxiv_2021_fEf_sol1.approved.txt  ValtonenOrnhagArxiv2021fEfTestCase.test_valtonenornhag_arxiv_2021_fEf_sol1_t.approved.txt  ValtonenOrnhagArxiv2021fEfTestCase.test_valtonenornhag_arxiv_2021_fEf_sol2.approved.txt  ValtonenOrnhagArxiv2021fEfTestCase.test_valtonenornhag_arxiv_2021_fEf_sol2_t.approved.txt  ValtonenOrnhagArxiv2021fEfTestCase.test_valtonenornhag_arxiv_2021_fEf_sol3.approved.txt  ValtonenOrnhagArxiv2021fEfTestCase.test_valtonenornhag_arxiv_2021_fEf_sol3_t.approved.txt  ValtonenOrnhagArxiv2021frEfrTestCase.test_valtonenornhag_arxiv_2021_frEfr_sol0.approved.txt  ValtonenOrnhagArxiv2021frEfrTestCase.test_valtonenornhag_arxiv_2021_frEfr_sol0_t.approved.txt  ValtonenOrnhagArxiv2021frEfrTestCase.test_valtonenornhag_arxiv_2021_frEfr_sol1.approved.txt  ValtonenOrnhagArxiv2021frEfrTestCase.test_valtonenornhag_arxiv_2021_frEfr_sol1_t.approved.txt  ValtonenOrnhagArxiv2021frEfrTestCase.test_valtonenornhag_arxiv_2021_frEfr_sol2.approved.txt  ValtonenOrnhagArxiv2021frEfrTestCase.test_valtonenornhag_arxiv_2021_frEfr_sol2_t.approved.txt  ValtonenOrnhagArxiv2021frEfrTestCase.test_valtonenornhag_arxiv_2021_frEfr_sol3.approved.txt  ValtonenOrnhagArxiv2021frEfrTestCase.test_valtonenornhag_arxiv_2021_frEfr_sol3_t.approved.txt  ValtonenOrnhagArxiv2021frEfrTestCase.test_valtonenornhag_arxiv_2021_frEfr_sol4.approved.txt  ValtonenOrnhagArxiv2021frEfrTestCase.test_valtonenornhag_arxiv_2021_frEfr_sol4_t.approved.txt  ValtonenOrnhagArxiv2021frEfrTestCase.test_valtonenornhag_arxiv_2021_frEfr_sol5.approved.txt  (+15 more)
